egress/tcp/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-mysql
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
  - name: mysql
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 15443
        tls:
          mode: ISTIO_MUTUAL
          sni: mysql.tcp.svc
