egress/tcp/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-through-egress-gateway
spec:
  hosts:
    - mysql.tcp.svc
  gateways:
    - istio-egressgateway-mysql
    - mesh
  tcp:
    - match:
        - gateways:
            - mesh
          destinationSubnets:
            - 192.168.122.1/32
          port: 3306
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: mysql
            port:
              number: 15443
    - match:
        - gateways:
            - istio-egressgateway-mysql
          port: 15443
      route:
        - destination:
            host: mysql.tcp.svc
            port:
              number: 3306
          weight: 100
